refactoring - springboot